--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -10,10 +11,13 @@ googleapis-common-protos==1.69.1
 httplib2==0.22.0
 idna==3.10
 oauthlib==3.2.2
+packaging==25.0
 proto-plus==1.26.0
 protobuf==5.29.3
 pyasn1==0.6.1
-pyasn1_modules==0.4.1
+pyasn1-modules==0.4.1
+pyinstaller==6.14.0
+pyinstaller-hooks-contrib==2025.4
 pyparsing==3.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
